<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="yap_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="yap_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_plain">text/plain</string>
    <string name="dev_mail">trpm33@yandex.ru</string>
    <string name="mailto">mailto:</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="track_time">Track time</string>
    <string name="artist_name">Artist name</string>
    <string name="track_name">Track name</string>
    <string name="track_cover">Track cover</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="refresh">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

</resources>