<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/settings"
        app:titleTextColor="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:orientation="vertical"
        android:paddingStart="@dimen/base_padding"
        tools:ignore="RtlSymmetry">

        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingEnd="6dp"
            android:gravity="center|start"
            android:textSize="16sp"
            android:text="@string/dark_theme"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textShare"
            android:layout_height="61dp"
            android:layout_width="match_parent"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:text="@string/share"
            app:drawableEndCompat="@drawable/ic_share" />

        <TextView
            android:id="@+id/textSupport"
            android:layout_height="61dp"
            android:layout_width="match_parent"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:text="@string/support"
            app:drawableEndCompat="@drawable/ic_support" />

        <TextView
            android:id="@+id/textTerms"
            android:layout_height="61dp"
            android:layout_width="match_parent"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:text="@string/terms"
            app:drawableEndCompat="@drawable/ic_arrow_forward" />
    </LinearLayout>
</LinearLayout>