<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSettings"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="28dp"
            android:paddingHorizontal="@dimen/base_padding"
            >

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingHorizontal="@dimen/base_padding"
                android:layout_marginBottom="@dimen/base_padding"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size"
                android:textFontWeight="500"
                app:icon="@drawable/ic_btn_search"
                app:iconTint="@color/gray"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                android:text="@string/search" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingHorizontal="@dimen/base_padding"
                android:layout_marginBottom="@dimen/base_padding"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size"
                android:textFontWeight="500"
                app:icon="@drawable/ic_btn_library"
                app:iconTint="@color/gray"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                android:text="@string/media" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingHorizontal="@dimen/base_padding"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size"
                android:textFontWeight="500"
                app:icon="@drawable/ic_btn_settings"
                app:iconTint="@color/gray"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                android:text="@string/settings" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>