<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryTint"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/base_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/base_padding" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_tags="playBtn, addBtn, likeBtn" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_tags="currentTime" />

    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="@dimen/base_padding"
        android:contentDescription="@string/track_cover"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintBottom_toTopOf="@id/trackTitle"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/toolbarPlayer"
        app:srcCompat="@drawable/track_placeholder_big" />

    <TextView
        android:id="@+id/trackTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/trackCover" />

    <TextView
        android:id="@+id/trackArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@id/topBarrier"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/trackTitle" />

    <ImageButton
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="addBtn"
        app:layout_constraintBottom_toTopOf="@id/currentTime"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        android:backgroundTint="@color/secondaryTint"
        app:srcCompat="@drawable/add_btn" />

    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="playBtn"
        app:layout_constraintEnd_toStartOf="@id/likeBtn"
        app:layout_constraintStart_toEndOf="@id/addBtn"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        android:backgroundTint="@color/secondaryTint"
        app:srcCompat="@drawable/play_btn" />

    <ImageButton
        android:id="@+id/likeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="likeBtn"
        android:backgroundTint="@color/secondaryTint"
        app:layout_constraintBottom_toTopOf="@id/currentTime"
        app:layout_constraintEnd_toStartOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        app:srcCompat="@drawable/like_btn" />

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:tag="currentTime"
        android:text="0:30"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@id/bottomBarrier"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/playBtn" />

    <TextView
        android:id="@+id/durationLabel"
        style="@style/TrackLabel"
        android:layout_marginTop="31dp"
        android:text="@string/track_duration"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier" />

    <TextView
        android:id="@+id/albumLabel"
        style="@style/TrackLabel"
        android:text="@string/track_album"
        app:layout_constraintBottom_toTopOf="@id/yearLabel"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintTop_toBottomOf="@id/durationLabel" />

    <TextView
        android:id="@+id/yearLabel"
        style="@style/TrackLabel"
        android:text="@string/track_year"
        app:layout_constraintBottom_toTopOf="@id/genreLabel"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintTop_toBottomOf="@id/albumLabel" />

    <TextView
        android:id="@+id/genreLabel"
        style="@style/TrackLabel"
        android:text="@string/track_genre"
        app:layout_constraintBottom_toTopOf="@id/countryLabel"
        app:layout_constraintStart_toStartOf="@id/leftGL"
        app:layout_constraintTop_toBottomOf="@id/yearLabel" />

    <TextView
        android:id="@+id/countryLabel"
        style="@style/TrackLabel"
        android:text="@string/track_country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftGL" />

    <TextView
        android:id="@+id/duration"
        style="@style/TrackValue"
        android:layout_marginTop="31dp"
        tools:text="5:35"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier" />

    <TextView
        android:id="@+id/album"
        style="@style/TrackValue"
        tools:text="Yesterday (Remastered 2009)"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/year"
        style="@style/TrackValue"
        tools:text="1965"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/genre"
        style="@style/TrackValue"
        tools:text="Rock"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="@id/rightGL"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/country"
        style="@style/TrackValue"
        tools:text="Великобритания"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGL" />

</androidx.constraintlayout.widget.ConstraintLayout>