<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondaryBackground"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSearch"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/search"
        app:titleTextColor="@color/secondaryColor"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/base_padding"
        android:paddingEnd="@dimen/base_padding"
        tools:ignore="RtlSymmetry">

        <EditText
            android:id="@+id/searchField"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@drawable/bg_corners_8dp"
            android:drawableStart="@drawable/ic_btn_search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/hintColor"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingEnd="0dp"
            android:ems="10"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_text_size"
            android:textColorHint="@color/hintColor" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_clear"
            tools:ignore="SpeakableTextPresentCheck" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/base_padding"
            android:textColor="@color/secondaryColor"
            android:textSize="@dimen/big_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/history"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearHistory"
            android:layout_width="148dp"
            style="@style/SearchBtn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/base_margin"
            android:text="@string/clear_history"
            android:visibility="visible" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="@dimen/placeholder_image_size"
            android:layout_height="@dimen/placeholder_image_size"
            android:layout_marginTop="102dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/placeholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="238dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/big_text_size"
            android:textColor="@color/secondaryColor"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refreshBtn"
            android:layout_width="91dp"
            style="@style/SearchBtn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            android:text="@string/refresh"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/list_margin"
            />

    </FrameLayout>




</LinearLayout>